--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga": "^3.3.0",
+    "react-icons": "^5.0.1",
     "sass": "^1.32.8",
     "shuffle-array": "^1.0.1"
-  },
-  "devDependencies": {}
+  }
 }
